tests/sumo/extended/calibrator/errors/invalid_flow/options.sumo
-n three_split.net.xml --no-step-log -a input_additional.add.xml
